fix spacing

--- a/src/less/public.less
+++ b/src/less/public.less
@@ -2,6 +2,9 @@
   &.block {
     display: block;
     min-height: 1.5rem;
+    > .tag {
+      padding: 0.5rem;
+    }
     word-break: break-word;
 
     &.array {
